feat(style): Sass
Configuring sass and add styles

--- a/src/views/components/calculator/index.marko
+++ b/src/views/components/calculator/index.marko
@@ -10,6 +10,4 @@ class {
 <div.count>
     ${state.count}
 </div>
-<button.example-button on-click('increment')>
-    Click me!
-</button>
+<button class="btn btn-large" on-click('increment')>Click me!</button>
