--- a/src/views/index.marko
+++ b/src/views/index.marko
@@ -10,10 +10,10 @@
         <lasso-head/>
     </head>
 <body>
-    <app-nav/>
-    <!-- UI component: -->
-    <calculator/>
-
+    <div class="container">
+        <app-nav/>
+        <calculator/>
+    </div>
     <app-footer/>
     <!-- JS includes -->
     <lasso-body/>
