--- a/src/views/components/app-nav/index.marko
+++ b/src/views/components/app-nav/index.marko
@@ -8,9 +8,12 @@ class {
         };
     }
 }
-
-<nav class="navbar navbar-inverse">
-    <div class="navbar-header">
-        <a class="navbar-brand" href="#">${state.title}</a>
+<div class="row">
+    <div class="col s12 m12">
+        <div class="card">
+            <div class="card-content">
+                <span class="flow-text">${state.title}</span>
+            </div>
+        </div>
     </div>
-</nav>
+</div>
