--- a/src/views/index.marko
+++ b/src/views/index.marko
@@ -10,12 +10,15 @@
         <lasso-head/>
     </head>
 <body>
+    <app-nav/>
     <div class="container">
-        <app-nav/>
-        <calculator/>
+        <app/>
     </div>
     <app-footer/>
     <!-- JS includes -->
     <lasso-body/>
+
+    <browser-refresh enabled="true"/>
+    <!-- <script src="{process.env.BROWSER_REFRESH_URL}"></script> -->
 </body>
 </html>
