--- a/src/public/sass/components/_variables.scss
+++ b/src/public/sass/components/_variables.scss
@@ -143,6 +143,12 @@ $gutter-width: 1.5rem !default;
 $element-top-margin: $gutter-width/3 !default;
 $element-bottom-margin: ($gutter-width * 2)/3 !default;
 
+// 18. Tables
+// ==========================================================================
+
+$table-border-color: rgba(0,0,0,.12) !default;
+$table-striped-color: rgba(242, 242, 242, 0.5) !default;
+
 // 20. Typography
 // ==========================================================================
 
