feat(setup): Setup environment

--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -9,3 +9,4 @@
 @import "./scss/components/grid";
 @import "./scss/components/buttons";
 @import "./scss/components/cards";
+@import "./scss/components/input";
