--- a/client/src/scss/_main.scss
+++ b/client/src/scss/_main.scss
@@ -1,6 +1,7 @@
 html,
 body {
-	font-family: Roboto light, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol';
 	margin: 0;
 	padding: 0;
 	display: flow-root;
