feat(client-input): Default input
Define default input to client

--- a/client/src/scss/components/_variables.scss
+++ b/client/src/scss/components/_variables.scss
@@ -69,6 +69,16 @@ $card-padding: 24px !default;
 $card-bg-color: #fff !default;
 $card-link-color: color("orange", "accent-2") !default;
 $card-link-color-light: lighten($card-link-color, 20%) !default;
+
+// 9. Dropdown
+// ==========================================================================
+
+$dropdown-bg-color: #fff !default;
+$dropdown-hover-bg-color: #eee !default;
+$dropdown-color: $secondary-color !default;
+$dropdown-item-height: 50px !default;
+
+
 // 10. Forms
 // ==========================================================================
 
