feat(api-client): Features and improvments
Must of implemented features came from tests and cant't be committed in time...

--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -2,11 +2,11 @@
 
 @import "./scss/components/color-variables";
 @import "./scss/components/variables";
-@import "./scss/main";
 @import "./scss/components/color-classes";
 @import "./scss/components/reset";
 @import "./scss/components/typography";
 @import "./scss/components/grid";
 @import "./scss/components/buttons";
 @import "./scss/components/cards";
-@import "./scss/components/input";
+@import "./scss/components/input-fields";
+@import "./scss/main";
